fix projet et sondage2

--- a/app/assets/stylesheets/front/_footer.scss
+++ b/app/assets/stylesheets/front/_footer.scss
@@ -42,8 +42,9 @@ footer {
     a {
       position: relative;
       margin: 10px;
-      width: 100%;
-      display: block;
+      width: 50%;
+
+      display: inline-block;;
       transition: all 250ms;
       overflow:hidden;
       border: 2px solid $primary;
@@ -54,6 +55,8 @@ footer {
       }
       img {
         transition: all 250ms;
+        width: 100%;
+        height: auto;
 
       }
     }
