--- a/app/assets/stylesheets/front/home/_projets.scss
+++ b/app/assets/stylesheets/front/home/_projets.scss
@@ -1,11 +1,47 @@
 @import "../vars";
+.panel {
+  margin-bottom: 25px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  .panel-title {
+    position: relative;
+    .article-img {
+      width: 100%;
+      height: 300px;
+    }
+    .panel-icon {
+      position: absolute;
+      padding: 2.5%;
+      bottom: 0;
+      right: 0;
+      height: 20%;
+      width: 15%;
+      .iconProjet{
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  .panel-content {
+    padding: 10px;
+  }
+
+  .panel-footer {
+
+  }
+
+
+}
+
+
 
 @media screen and (min-width: 460px) {
   #projets {
-    background: asset-url("clouds-background-light.jpg") no-repeat;
-    background-position: 0 120%;
+    background: asset-url("bg_home_projets.png") no-repeat;
+    background-position: 2% 40%;
     background-color: #A0DAFF;
     margin-bottom: 5%;
+    background-size: 104%;
     .projets_block-title{
       color:rgb(80 , 80, 80);
       text-align: center;
