--- a/app/assets/stylesheets/front/projets/index.scss
+++ b/app/assets/stylesheets/front/projets/index.scss
@@ -7,8 +7,10 @@ body {
 
 .btn-primary {
   background-color: $primary;
+  border-radius:0;
   &:hover {
     background-color: darken($primary, 15%);
+    border-radius:0;
   }
 }
 
@@ -179,6 +181,9 @@ hr {
       display : block;
       margin: 0 auto;
     }
+    .iconProjet {
+        width: 33%;
+    }
     img {
       width: 100%;
     }
@@ -230,4 +235,43 @@ svg:hover {
   ellipse {
     fill: $primary;
   }
+}
+
+#pList {
+  margin-top: 75px;
+  margin-bottom: 75px;
+}
+
+.panel {
+  margin-bottom: 25px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  .panel-title {
+    position: relative;
+    .article-img {
+      width: 100%;
+      height: 300px;
+    }
+    .panel-icon {
+      position: absolute;
+      padding: 2.5%;
+      bottom: 0;
+      right: 0;
+      height: 20%;
+      width: 15%;
+      .iconProjet{
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  .panel-content {
+    padding: 10px;
+  }
+
+  .panel-footer {
+
+  }
+
+
 }
