--- a/app/assets/stylesheets/front/surveys/index.scss
+++ b/app/assets/stylesheets/front/surveys/index.scss
@@ -2,6 +2,16 @@
 
 $primary: #DC6350;
 
+.btn {
+  border-radius: 0;
+  background-color: $primary;
+  &:hover {
+    border-radius: 0;
+
+    background-color: darken($primary, 20%);
+  }
+}
+
 header {
   text-align: center;
   position: relative;
@@ -38,23 +48,65 @@ header {
   }
 }
 
-.survey__col {
-  width: 100%;
-  height: 250px;
-  margin:0 auto;
-  background-color: darkgrey;
-  position: relative;
-  .survey__col-content {
-    position: absolute;
-    top: 10px;
-    left:10px;
-    right: 10px;
-    bottom: 10px;
-    padding: 5px;
-    border: 2px solid white;
-  }
-}
 
+#surveyList {
+  padding-top: 150px;
+  padding-bottom: 150px;
+  background-color: #d8d8d8;
+  .survey__col {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    margin:0 auto;
+    background-color: white;
+    .survey__col--content {
+      height: inherit;
+      .survey__col--content__title {
+        background-color: $primary;
+        height: 20%;
+        h2  {
+          color: white;
+          text-align: center;
+          margin:0;
+          margin-left: 10%;
+          margin-right: 10%;
+          font-size: 1.5em;
+          height: 100%;
+          a {
+            color: white;
+            text-decoration: none;
+            height: 100%;
+            display: inline-block;
+            padding-top: 2.5%;
+            padding-bottom: 2.5%;
+          }
+        }
+      }
+      .survey__col--content__desc {
+          padding: 2.5%;
+      }
+
+      p {
+        padding-top: 2.5%;
+        padding-left: 5%;
+        padding-right: 5%;
+      }
+    }
+    .survey__col--infos {
+      position: absolute;
+      bottom: 5%;
+      left: 7.5%;
+      right: 7.5%;
+      line-height: 34px;
+      i {
+        color: $primary;
+
+      }
+    }
+  }
+
+
+}
 #survey__infos {
   margin-bottom: 150px;
   padding-top: 50px;
@@ -74,7 +126,6 @@ header {
     padding-right: 150px;
   }
 }
-
 
 #catchPhrase {
   #catchPhraseBlock-repere {
