--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -108,59 +108,54 @@ meta title: "Meusetech - Accueil",
           </div>
         </div>
         <div class="row">
+
           <div class="projets_content">
             <div class="last">
-              <% @last_projects.each_with_index do | lastProject, index | %>
-              <% if index < 3 %>
-                <div class="col-xs-12 col-md-4">
-                  <article class="projet-one">
-                    <div class="col-xs-2">
-                      <%= image_tag( lastProject.category.icon,  alt: "icone projet")%>
-                    </div>
-                    <div class="col-xs-10">
-                      <%= link_to image_tag( lastProject.thumb,  alt: "image article") , project_path( lastProject.friendly_id )%>
-                    </div>
-                    <div class="projet-one_desc">
-                      <h2><%= link_to lastProject.name , project_path( lastProject.friendly_id )%></h2>
-                      <h4><%= lastProject.owner.first_name %> <%= lastProject.owner.last_name %></h4>
-                      <p class="hidden-xs hidden-sm  hidden-md ">
-                      <%=  truncate(lastProject.content, :length => 180, :omission => "" , :escape => false) %>
-                      </p>
-                      <div class="projet-one_time">
-                        le 15 juillet 2015
+              <% @last_projects.each_with_index do | project, index | %>
+                  <div class="col-xs-12 col-md-4">
+                    <article class="panel">
+                      <div class="panel-title">
+                        <%= link_to image_tag( project.thumb,  alt: "image article", class:"article-img") , project_path( project.friendly_id )%>
+                        <div class="panel-icon" style="background-color:<%= project.category.color %>">
+                          <%= image_tag( project.category.icon,  alt: "icone projet", class:"iconProjet")%>
+                        </div>
                       </div>
-                      <%= link_to "Voir le projet", project_path( lastProject.friendly_id ),  class:"btn btn-primary btn-projet"%>
-                    </div>
-                  </article>
-                </div>
-                <% end %>
+                      <div class="panel-content">
+                        <h2><%= link_to project.name , project_path( project.friendly_id )%></h2>
+                        <h6><%= project.owner.first_name %> <%= project.owner.last_name %></h6>
+                        <p class="">
+                        <%=  truncate(project.content, :length => 180, :omission => "" , :escape => false) %>
+                        </p>
+                      </div>
+                      <div class="panel-footer">
+                        <%= link_to "Voir le projet", project_path( project.friendly_id ),  class:"btn btn-primary btn-projet"%>
+                      </div>
+                    </article>
+                  </div>
               <% end %>
             </div>
             <div class="commented"  style="display: none;">
-              <%@most_active_projects.each_with_index do | lastProject, index | %>
-                <% if index < 3 %>
-                <div class="col-xs-12 col-md-4">
-                  <article class="projet-one">
-                    <div class="col-xs-2">
-                      <%= image_tag( lastProject.category.icon,  alt: "icone projet")%>
-                    </div>
-                    <div class="col-xs-10">
-                      <%= link_to image_tag( lastProject.thumb,  alt: "image article") , project_path( lastProject.friendly_id )%>
-                    </div>
-                    <div class="projet-one_desc">
-                      <h2><%= link_to lastProject.name , project_path( lastProject.friendly_id )%></h2>
-                      <h4><%= lastProject.owner.first_name %> <%= lastProject.owner.last_name %></h4>
-                      <p class="hidden-xs hidden-sm  hidden-md ">
-                      <%=  truncate(lastProject.content, :length => 180, :omission => "" , :escape => false) %>
-                      </p>
-                      <div class="projet-one_time">
-                        le 15 juillet 2015
+              <% @most_active_projects.each_with_index do | project, index | %>
+                  <div class="col-xs-12 col-md-4">
+                    <article class="panel">
+                      <div class="panel-title">
+                        <%= link_to image_tag( project.thumb,  alt: "image article", class:"article-img") , project_path( project.friendly_id )%>
+                        <div class="panel-icon" style="background-color:<%= project.category.color %>">
+                          <%= image_tag( project.category.icon,  alt: "icone projet", class:"iconProjet")%>
+                        </div>
                       </div>
-                      <%= link_to "Voir le projet", project_path( lastProject.friendly_id ),  class:"btn btn-primary btn-projet"%>
-                    </div>
-                  </article>
-                </div>
-                <% end %>
+                      <div class="panel-content">
+                        <h2><%= link_to project.name , project_path( project.friendly_id )%></h2>
+                        <h6><%= project.owner.first_name %> <%= project.owner.last_name %></h6>
+                        <p class="">
+                        <%=  truncate(project.content, :length => 180, :omission => "" , :escape => false) %>
+                        </p>
+                      </div>
+                      <div class="panel-footer">
+                        <%= link_to "Voir le projet", project_path( project.friendly_id ),  class:"btn btn-primary btn-projet"%>
+                      </div>
+                    </article>
+                  </div>
               <% end %>
             </div>
           </div>
