--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -3,25 +3,42 @@ meta title: "Meusetech - #{@survey.title}",
      description: @survey.description,
      keywords: ["Meusetech", "sondages",  @survey.title]
 %>
-<div class="container" id="poll-list" style="margin-bottom:75px;">
-  <h1><%= @survey.title %></h1>
-  <%= form_for :fields, :url => {controller: "surveys", action: "reponse", method: "post"} do |f| %>
-  <input type="hidden" name="fields[survey_id]" value="<%= @survey.id %>">
-    <% @survey.fields.each do | field | %>
-      <div class="form-group">
-        <label for="fields[<%= field.id %>]"><%= field.question %></label>
-        <% if field.input_type == "select" && field.optionsFormated.size > 0 %>
-          <select name="fields[questions][<%= field.id %>]" class="form-control" <%= field.is_required ? "required" : "" %>>
-            <% field.optionsFormated.each_with_index do | value, key | %>
-              <option value="<%= key %>"> <%= value %></option>
-            <% end %>
-          </select>
-        <% else %>
-          <input type="<%= field.input_type %>" name="fields[questions][<%= field.id %>]" value="<%= ( field.input_type == "checkbox" ) ? "0" : "" %>"
-            class="form-control" <%= field.is_required ? "required" : "" %> <%= field.rulesFormated %> />
-        <% end %>
+
+<%= stylesheet_link_tag 'front/surveys/show', media: 'all', 'data-turbolinks-track' => true %>
+<header>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1><%= @survey.title%></h1>
+        <ul>
+          <li>Accueil</li>
+          <li>Sondages</li>
+        </ul>
       </div>
+    </div>
+  </div>
+</header>
+<section id="pollOne">
+  <div class="container" >
+    <%= form_for :fields, :url => {controller: "surveys", action: "reponse", method: "post"} do |f| %>
+    <input type="hidden" name="fields[survey_id]" value="<%= @survey.id %>">
+      <% @survey.fields.each do | field | %>
+        <div class="form-group">
+          <label for="fields[<%= field.id %>]"><%= field.question %></label>
+          <% if field.input_type == "select" && field.optionsFormated.size > 0 %>
+            <select name="fields[questions][<%= field.id %>]" class="form-control" <%= field.is_required ? "required" : "" %>>
+              <% field.optionsFormated.each_with_index do | value, key | %>
+                <option value="<%= key %>"> <%= value %></option>
+              <% end %>
+            </select>
+          <% else %>
+            <input type="<%= field.input_type %>" name="fields[questions][<%= field.id %>]" value="<%= ( field.input_type == "checkbox" ) ? "0" : "" %>"
+              class="form-control" <%= field.is_required ? "required" : "" %> <%= field.rulesFormated %> />
+          <% end %>
+        </div>
+      <% end %>
+      <%= f.submit :valider , class: "btn btn-primary"%>
     <% end %>
-    <%= f.submit :valider , class: "btn btn-primary"%>
-  <% end %>
-</div>
+  </div>
+
+</section>
