--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -22,7 +22,6 @@
               <tr>
                 <th>#</th>
                 <th>En ligne?</th>
-                <th>Image</th>
                 <th>Categorie</th>
                 <th>Titre</th>
                 <th>Création</th>
@@ -33,23 +32,22 @@
             <tbody>
               <% @articles.each do | article | %>
               <tr>
-                <td style="line-height:64px;"><%= article.id %></td>
-                <td>
+                <td style="line-height:48px;"><%= article.id %></td>
+                <td style="line-height:48px;">
                   <%= form_tag admin_articlepublish_url do %>
                     <%= hidden_field_tag "id", article.id %>
                     <% if article.published %>
-                      <%= submit_tag "Oui" %>
+                      <%= submit_tag "Oui", class: "btn btn-success" %>
                     <% else %>
-                      <%= submit_tag "Non" %>
+                      <%= submit_tag "Non", class: "btn btn-danger" %>
                     <% end %>
                   <% end %>
                 </td>
-                <td style="line-height:64px;"><%= image_tag(article.thumb ? article.thumb : article.category.image, size: "64x64", alt: "image article")%></td>
-                <td style="line-height:64px;"><%= image_tag(article.category.icon, size: "32x32", alt: "image category")%></td>
-                <td style="line-height:64px;"><%= article.name %></td>
-                <td style="line-height:64px;"><%= time_tag(article.created_at) %></td>
-                <td style="line-height:64px;"><%= (article.published_at) ? time_tag(article.published_at) : '' %></td>
-                <td style="line-height:64px;">
+                <td style="line-height:48px;"><%= article.category.name %></td>
+                <td style="line-height:48px;"><%= article.name %></td>
+                <td style="line-height:48px;"><%= time_tag(article.created_at) %></td>
+                <td style="line-height:48px;"><%= (article.published_at) ? time_tag(article.published_at) : '' %></td>
+                <td style="line-height:48px;">
                   <%= link_to '<i class="fa fa-facebook" aria-hidden="true"></i>'.html_safe, admin_redirectToFacebook_url(article.id), class: 'btn btn-primary', method: 'post'%>
                   <%= link_to "<i class='fa fa-eye'></i>".html_safe, article_url(article.friendly_id), class:'btn btn-success'%>
                   <%= link_to "<i class='fa fa-pencil'></i>".html_safe, edit_admin_article_url(article.friendly_id), class:'btn btn-warning'%>
