--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -34,9 +34,9 @@
                     <%= form_tag admin_usercancomment_url do %>
                       <%= hidden_field_tag "id", user.id %>
                       <% if user.can_comment %>
-                        <%= submit_tag "Oui" %>
+                        <%= submit_tag "Oui", class: "btn btn-success"  %>
                       <% else %>
-                        <%= submit_tag "Non" %>
+                        <%= submit_tag "Non", class: "btn btn-danger"  %>
                       <% end %>
                     <% end %>
                   </td>
@@ -46,9 +46,9 @@
                     <%= form_tag admin_userban_url do %>
                       <%= hidden_field_tag "id", user.id %>
                       <% if user.is_banned %>
-                        <%= submit_tag "Oui" %>
+                        <%= submit_tag "Oui", class: "btn btn-success"  %>
                       <% else %>
-                        <%= submit_tag "Non" %>
+                        <%= submit_tag "Non", class: "btn btn-danger"  %>
                       <% end %>
                     <% end %>
                   </td>
